unpackaged/objects/wb_CIC_Compulsory__c.object
<CustomObject>
    <description>WellBe Car Compulsory &amp; Voluntary Insurances</description>
    <fields>
        <fullName>CarInsurancedCar__c</fullName>
        <label>対象車</label>
        <referenceTo>wb_CarInsurancedCars__c</referenceTo>
        <relationshipLabel>車保険</relationshipLabel>
        <relationshipName>InsurancedCar_Cps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Car__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>車両</label>
        <referenceTo>wb_Vehicle__c</referenceTo>
        <relationshipLabel>車保険</relationshipLabel>
        <relationshipName>Car_Cps_Ins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cps_AfterDeathImpediment__c</fullName>
        <label>（強制）死亡後遺障害</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cps_CancelDate__c</fullName>
        <label>（強制）保険解約日 （24時迄）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cps_CancelReason__c</fullName>
        <label>（強制）保険解約理由</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cps_CommissionRate__c</fullName>
        <label>（強制）手数料率</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cps_Commission__c</fullName>
        <label>（強制）手数料</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cps_Currency__c</fullName>
        <label>（強制）保険通貨</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cps_CurrentEndDate__c</fullName>
        <label>（強制）保険終期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cps_CurrentStartDate__c</fullName>
        <label>（強制）保険始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cps_InsuranceAmount__c</fullName>
        <label>（強制）保険料</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cps_InsuranceCompany__c</fullName>
        <label>（強制）保険会社名</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cps_MedicalCost__c</fullName>
        <label>（強制）医療費用</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cps_NoLbtAfterDeathImpediment__c</fullName>
        <label>（強制）無責任死亡後遺障害</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cps_NoLbtAfterDeathMedicalCost__c</fullName>
        <label>（強制）無責任医療費用</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cps_NoLbtPropertyLoss__c</fullName>
        <label>（強制）無責任財産損失</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cps_PolicyNumber__c</fullName>
        <label>（強制）証券番号</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cps_PropertyLoss__c</fullName>
        <label>（強制）財産損失</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cps_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>（強制)サービス</label>
        <referenceTo>wb_Service__c</referenceTo>
        <relationshipLabel>車保険 (（強制)サービス)</relationshipLabel>
        <relationshipName>Cps_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIt_ScratchDamage__c</fullName>
        <label>（任意）鈎損</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIt_VehicleDamage__c</fullName>
        <label>（任意）車両損失</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIt_VehicleTheft__c</fullName>
        <label>（任意）車両盗難</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vlt_3rdPartyDamage__c</fullName>
        <label>（任意）第三者賠償</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vlt_CancelDate__c</fullName>
        <label>（任意）保険解約日 （24時迄）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vlt_CancelReason__c</fullName>
        <label>（任意）保険解約理由</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vlt_CommissionRate__c</fullName>
        <label>（任意）手数料率</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vlt_Commission__c</fullName>
        <label>（任意）手数料</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vlt_Currency__c</fullName>
        <label>（任意）保険通貨</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vlt_DriverInjury__c</fullName>
        <label>（任意）車上人責任（運転）</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vlt_EndDate__c</fullName>
        <label>（任意）保険終期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vlt_GlassBreakage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>（任意）ガラス単独破壊</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vlt_InsuranceAmount__c</fullName>
        <label>（任意）保険料</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vlt_InsuranceCompany__c</fullName>
        <label>（任意）保険会社名</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vlt_OtherItems__c</fullName>
        <label>（任意）他の保険項目</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vlt_PassengerInjury__c</fullName>
        <label>（任意）車上人責任（搭乗）</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vlt_PolicyNumber__c</fullName>
        <label>（任意）証券番号</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vlt_PsgrPersonalAccident__c</fullName>
        <label>（任意）搭乗者意外保険</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vlt_Remark__c</fullName>
        <label>（任意）備考</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vlt_Selfburning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>（任意）車体自燃</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vlt_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>（任意）サービス</label>
        <referenceTo>wb_Service__c</referenceTo>
        <relationshipLabel>車保険</relationshipLabel>
        <relationshipName>Vlt_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vlt_StartDate__c</fullName>
        <label>（任意）保険始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vlt_Submersion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>（任意）水没険</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>f_Cps_ContactNumber__c</fullName>
        <formula>Cps_Service__r.ContactNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（強制）緊急連絡電話番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_Cps_Effective__c</fullName>
        <formula>ISNULL(Cps_CurrentEndDate__c) =FALSE &amp;&amp; Cps_CurrentEndDate__c &gt;= TODAY() &amp;&amp; OR( ISNULL(Cps_CancelDate__c) = TRUE, Cps_CancelDate__c &gt;=TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>強制有効</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>f_RegistryNumber__c</fullName>
        <formula>CarInsurancedCar__r.RegistryNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>登録番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_Vlt_ContactNumber__c</fullName>
        <formula>Vlt_Service__r.ContactNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（任意）緊急連絡電話番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_Vlt_Effective__c</fullName>
        <formula>ISNULL(Vlt_EndDate__c) =FALSE &amp;&amp; Vlt_EndDate__c &gt;= TODAY() &amp;&amp; OR( ISNULL(Vlt_CancelDate__c) = TRUE, Vlt_CancelDate__c &gt;=TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>任意有効</label>
        <type>Checkbox</type>
    </fields>
    <label>車保険</label>
    <nameField>
        <label>車保険番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>